# iroha

./: .gitignore  circle.yml
core/: CMakeLists.txt
core/crypto/: CMakeLists.txt  hash.cpp
test/crypto/: CMakeLists.txt  hash-test.cpp
